# imarqd-frontend

./: .editorconfig  .gitattributes  .gitignore  MILESTONE2_GUIDE.md  README-NEW-LAPTOP.md  README.md  README_tree.md  Video Embedding.md  bootstrap.ps1  cleanup.ps1  deploy_backend.ps1  img_resize.py  package-lock.json  package.json  scripts.md  tree_directory.py
apps/api/: .dockerignore  Dockerfile  klyvo_dev.db  pubkey.asc  pyproject.toml  requirements.txt  sig.asc
apps/api/chain/: hardhat.config.ts  package-lock.json  package.json  tsconfig.json
apps/api/chain/cache/: solidity-files-cache.json
apps/api/chain/contracts/: ProofRegistry.sol  ProofRegistryV2.sol
apps/api/chain/scripts/: deploy.ts  deploy_v2.ts  ping_v2.ts
apps/api/keys/: 58efe729-fa28-5542-813c-0df2dcfdc69a.asc
apps/api/src/app/: main.py
apps/api/src/app/api/routes/: auth.py  keys.py  media_ids.py  media_registry.py  owner_sha.py  pgp.py  pgp_debug.py  registry.py  registry_v2.py  root.py  upload.py  verify_auto.py  video.py  watermarking.py
apps/api/src/app/core/: config.py
apps/api/src/app/db/: models.py  session.py
apps/api/src/app/services/: iwm.py  watermark.py
apps/api/src/app/services/blockchain/: client.py  registry.py
apps/api/src/klyvo_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: test_watermarking_ecc_routes.py  test_watermarking_routes.py
apps/api/typechain-types/: ProofRegistry.ts  ProofRegistryV2.ts  hardhat.d.ts  index.ts
apps/api/typechain-types/factories/: ProofRegistryV2__factory.ts  ProofRegistry__factory.ts  index.ts
(+69 files in other folders)
