[project]
name = "klyvo-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
  "sqlmodel>=0.0.22",
]

[tool.uvicorn]
host = "0.0.0.0"
port = 8000
factory = false


